fixing somethings